# aula_20_python_desafio

./: README.md  pyproject.toml
backend/: crud.py  database.py  models.py  router.py  schemas.py  teste_pg.py
