[tool.poetry]
name = "aula-20-python-desafio"
version = "0.1.0"
description = ""
authors = ["Patrick Perez"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.40"
pydantic = {extras = ["email"], version = "^2.11.3"}
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"
streamlit = "^1.44.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
